--- a/emails/layout/_footer.text.ejs
+++ b/emails/layout/_footer.text.ejs
@@ -1,3 +1,3 @@
 =====
-Copyright (c) 2021 <%= process.env.APP_NAME %>
+Copyright (c) <%= (new Date()).getFullYear() %> <%= process.env.APP_NAME %>
 <%= process.env.BASE_URL %>
