[Fixes #215] Updated welcome and invitation email text

--- a/emails/invitation/html.ejs
+++ b/emails/invitation/html.ejs
@@ -1,6 +1,6 @@
 <%- include('../layout/_header.html.ejs') %>
 <h1>You're Invited to Peak Response</h1>
-<p>You've been invited by <%= senderName %> to join the <%= agencyName %> on Peak Response.</p>
+<p>You've been invited by <%= senderName %> to join the <%= agencyName %> organization on Peak Response.</p>
 <p>To accept your invitation, click on the link below.</p>
 <%- include('../layout/_button.html.ejs', {
   label: 'Join Peak Response',
