--- a/emails/invitation/text.ejs
+++ b/emails/invitation/text.ejs
@@ -2,7 +2,7 @@
 You're Invited to Peak Response
 ===============================
 
-You've been invited by <%= senderName %> to join the <%= agencyName %> on Peak Response.
+You've been invited by <%= senderName %> to join the <%= agencyName %> organization on Peak Response.
 
 To accept your invitation, click on the link below.
 
