--- a/emails/welcome/text.ejs
+++ b/emails/welcome/text.ejs
@@ -1,7 +1,7 @@
 <%- include('../layout/_header.text.ejs') %>
 
 Welcome <%= firstName %>,
-Thanks for joining Peak Response! You're all signed up as part of the <%= agencyName %> Peak Response Team <% if (isOwner) { %>and have been automatically made the owner<% } %>.  We're excited to have you join our community of first responders looking to bring order to the chaos!
+Thanks for joining Peak Response! You're all signed up as part of the <%= agencyName %> organization<% if (isOwner) { %> and have been automatically made the owner<% } %>.  We're excited to have you join our community of first responders!
 
 Getting Started is Easy 
 You can access your account on the web at:
