[Closes #213] Adds a placeholder message when no incidents to display

--- a/angular/projects/shared/src/lib/components/list.component.html
+++ b/angular/projects/shared/src/lib/components/list.component.html
@@ -1,3 +1,4 @@
 <shared-loader *ngIf="!records"></shared-loader>
 <ng-template *ngFor="let record of records; trackBy: trackById" [ngTemplateOutlet]="template" [ngTemplateOutletContext]="{records: records, record: record}"></ng-template>
+<ng-template *ngIf="records?.length === 0" [ngTemplateOutlet]="emptyTemplate"></ng-template>
 <span #paginationLoader="sharedAutoload" *ngIf="paginationLink" [shared-autoload]="paginationLink" (onLoadMore)="onLoadMore($event)"></span>
