--- a/angular/projects/app/src/app/incidents/list-incidents.component.html
+++ b/angular/projects/app/src/app/incidents/list-incidents.component.html
@@ -51,6 +51,9 @@
             </td>
           </tr>
         </ng-template>
+        <ng-template #empty>
+          <tr><th>No incidents yet.</th></tr>
+        </ng-template>
       </shared-list>
     </table>
   </div>
