--- a/angular/projects/admin/src/app/states/nemsis-state.component.html
+++ b/angular/projects/admin/src/app/states/nemsis-state.component.html
@@ -11,12 +11,12 @@
     <span *ngIf="!repo || isRepoInitializing"><shared-loader></shared-loader> Please wait...</span>
   </div>
   <h4>Data Sets</h4>
-  <div *ngIf="state?.status?.message" class="row">
+  <div *ngIf="isDataSetImporting?.status?.message" class="row">
     <div class="col-lg-6">
       <div class="alert alert-info">
         <div class="d-flex justify-content-between align-items-center">
-          <div><shared-loader *ngIf="state.status?.code === 202"></shared-loader> {{state.status?.message}}</div>
-          <i (click)="onCancelDataSetImport()" class="far fa-times-circle"></i>
+          <div><shared-loader *ngIf="isDataSetImporting.status?.code === 202"></shared-loader> {{isDataSetImporting.status?.message}}</div>
+          <i (click)="onCancelDataSetImport()" class="far fa-times-circle clickable"></i>
         </div>
       </div>
     </div>
@@ -30,7 +30,8 @@
             <div *ngFor="let version of repo?.dataSetVersions" class="array-field__item d-flex justify-content-between align-items-center">
               {{version|version}}
               <span>
-                <i *ngIf="isDataSetInstalled(version); let dataSet" (click)="onDataSetImport(dataSet.id)" class="fas fa-file-import clickable me-3"></i>
+                <ng-container *ngIf="isDataSetInstalled(version); let dataSet"><shared-loader *ngIf="dataSet.id === isDataSetImporting?.id && isDataSetImporting.status?.code === 202" class="me-3"></shared-loader></ng-container>
+                <i *ngIf="!isDataSetImporting && isDataSetInstalled(version); let dataSet" (click)="onDataSetImport(dataSet)" class="fas fa-file-import clickable me-3"></i>
                 <i *ngIf="isDataSetInstalled(version)" class="fas fa-check-circle text-success"></i>
                 <i *ngIf="!isDataSetInstalled(version) && !isDataSetInstalling" (click)="onDataSetInstall(version)" class="far fa-circle clickable"></i>
                 <shared-loader *ngIf="!isDataSetInstalled(version) && isDataSetInstalling === version"></shared-loader>
