--- a/angular/projects/admin/src/app/demographics/versions/edit-version-demographics.component.html
+++ b/angular/projects/admin/src/app/demographics/versions/edit-version-demographics.component.html
@@ -7,17 +7,17 @@
       <li class="nav__item"><a tabIndex="0" class="nav__link nav__link--active" routerLink="">Details</a></li>
       <li class="nav__item"><a tabIndex="0" class="nav__link" routerLink="preview">XML</a></li>
     </ul>
-    <shared-form *ngIf="id" type="versions" [id]="id">
+    <shared-form *ngIf="id" type="versions" [id]="id" (update)="onUpdate()">
       <ng-template let-record="record" let-error="error">
         <div class="mb-3 d-flex align-items-center">
           <shared-text-field id="name" class="flex-grow-1 me-3" label="Name" [source]="record" [error]="error"></shared-text-field>
           <shared-checkbox id="isDraft" label="Draft?" [source]="record" [error]="error"></shared-checkbox>
         </div>
         <div class="mb-3">
-          <shared-text-field id="nemsisVersion" label="NEMSIS Version" [source]="record" [error]="error"></shared-text-field>
+          <shared-text-field id="nemsisVersion" label="NEMSIS Version" [source]="record" [target]="record" [error]="error"></shared-text-field>
         </div>
         <div class="mb-3">
-          <shared-text-field id="displayVersion" label="State Data Set Version" [source]="record.stateDataSet" [error]="error"></shared-text-field>
+          <shared-object-field id="stateDataSetId" label="State Data Set" [source]="record" [target]="record" [error]="error" objectNameProperty="displayVersion" objectApiPath="nemsisStateDataSets"></shared-object-field>
         </div>
         <div class="mb-3">
           <shared-text-field id="stateSchematronVersion" label="State Schematron Version" [source]="record" [error]="error"></shared-text-field>
