--- a/angular/projects/admin/src/app/states/nemsis-state.component.html
+++ b/angular/projects/admin/src/app/states/nemsis-state.component.html
@@ -73,7 +73,46 @@
   <h4>Schematrons</h4>
   <div class="row">
     <div class="col-lg-6 col-xl-4">
-      <div class="mb-3">
+      <div class="mb-5">
+        <div class="array-field array-field--noclear">
+          <div class="form-field form-field--noclear form-field--nonempty">
+            <label>Repository DEM Schematrons</label>
+            <div *ngFor="let version of repo?.demSchematronVersions" class="array-field__item d-flex justify-content-between align-items-center">
+              {{version|version}}
+              <span>
+                <i *ngIf="isSchematronInstalled(version)" class="fas fa-check-circle text-success"></i>
+                <i *ngIf="!isSchematronInstalled(version) && !isSchematronInstalling" (click)="onSchematronInstall(version)" class="far fa-circle clickable"></i>
+                <shared-loader *ngIf="!isSchematronInstalled(version) && isSchematronInstalling === version"></shared-loader>
+              </span>
+            </div>
+            <div *ngIf="(repo?.demSchematronVersions.length ?? 0) == 0" class="array-field__item">
+              <span *ngIf="!(repo?.initialized ?? false)">Repository not initialized</span>
+              <span *ngIf="repo?.initialized">None</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-lg-6 col-xl-4">
+      <div class="mb-5">
+        <div class="array-field array-field--noclear mb-3">
+          <div *ngIf="externalDemSchematrons; let schematrons" class="form-field form-field--noclear form-field--nonempty">
+            <label>External DEM Schematrons</label>
+            <div *ngFor="let schematron of schematrons" class="array-field__item">
+              {{schematron.version|version}}
+            </div>
+            <div *ngIf="(schematrons.length ?? 0) == 0" class="array-field__item">
+              <span>None</span>
+            </div>
+          </div>
+        </div>
+        <button type="button" class="btn btn--sm btn--primary">Import DEM Schematron</button>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-lg-6 col-xl-4">
+      <div class="mb-5">
         <div class="array-field array-field--noclear">
           <div class="form-field form-field--noclear form-field--nonempty">
             <label>Repository EMS Schematrons</label>
@@ -94,7 +133,7 @@
       </div>
     </div>
     <div class="col-lg-6 col-xl-4">
-      <div class="mb-3">
+      <div class="mb-5">
         <div class="array-field array-field--noclear mb-3">
           <div *ngIf="externalEmsSchematrons; let schematrons" class="form-field form-field--noclear form-field--nonempty">
             <label>External EMS Schematrons</label>
@@ -106,7 +145,7 @@
             </div>
           </div>
         </div>
-        <button type="button" class="btn btn--sm btn--primary">Import Schematron</button>
+        <button type="button" class="btn btn--sm btn--primary">Import EMS Schematron</button>
       </div>
     </div>
   </div>
