Disable editing Version if not draft

--- a/angular/projects/design/src/styles/_forms.scss
+++ b/angular/projects/design/src/styles/_forms.scss
@@ -146,10 +146,10 @@ form {
 }
 
 .form-field--disabled,
-fieldset:disabled .form-field {
+fieldset[disabled] .form-field {
   border-color: $base-300;
   &::after {
-    display: none;
+    display: none !important;
   }
 }
 
