Clean up displayVersion handling

--- a/angular/projects/admin/src/app/demographics/dashboard-demographics.component.html
+++ b/angular/projects/admin/src/app/demographics/dashboard-demographics.component.html
@@ -15,7 +15,7 @@
             <span>NEMSIS:</span> {{agency?.version?.nemsisVersion}}
           </div>
           <div class="array-field__item">
-            <span>State Data Set:</span> {{agency?.version?.stateDataSet?.displayVersion|version}}
+            <span>State Data Set:</span> {{agency?.version?.stateDataSet?.displayVersion}}
           </div>
         </div>
       </div>
@@ -35,7 +35,7 @@
               <span>NEMSIS:</span> {{agency?.draftVersion?.nemsisVersion}}
             </div>
             <div class="array-field__item">
-              <span>State Data Set:</span> {{agency?.draftVersion?.stateDataSet?.displayVersion|version}}
+              <span>State Data Set:</span> {{agency?.draftVersion?.stateDataSet?.displayVersion}}
             </div>
           </div>
         </div>
