--- a/angular/projects/admin/src/app/states/nemsis-state.component.html
+++ b/angular/projects/admin/src/app/states/nemsis-state.component.html
@@ -53,7 +53,7 @@
             <div *ngFor="let dataSet of dataSets" class="array-field__item d-flex justify-content-between align-items-center">
               <div>
                 {{dataSet.fileName}}<br />
-                <span class="small">{{dataSet.displayVersion|version}}</span>
+                <span class="small">{{dataSet.displayVersion}}</span>
               </div>
               <shared-loader *ngIf="dataSet.id === isDataSetImporting?.id && isDataSetImporting.status?.code === 202"></shared-loader>
               <i *ngIf="!isDataSetImporting" (click)="onDataSetImport(dataSet)" (click)="onDataSetImport(dataSet)" class="fas fa-file-import clickable"></i>
@@ -101,7 +101,7 @@
             <div *ngFor="let schematron of schematrons" class="array-field__item">
               {{schematron.fileName}}<br />
               <ng-container *ngIf="schematron.fileVersion"><span class="small">{{schematron.fileVersion}}</span><br /></ng-container>
-              <span class="small">{{schematron.displayVersion|version}}</span>
+              <span class="small">{{schematron.displayVersion}}</span>
           </div>
             <div *ngIf="(schematrons.length ?? 0) == 0" class="array-field__item">
               <span>None</span>
@@ -145,7 +145,7 @@
             <div *ngFor="let schematron of schematrons" class="array-field__item">
               {{schematron.fileName}}<br />
               <ng-container *ngIf="schematron.fileVersion"><span class="small">{{schematron.fileVersion}}</span><br /></ng-container>
-              <span class="small">{{schematron.displayVersion|version}}</span>
+              <span class="small">{{schematron.displayVersion}}</span>
             </div>
             <div *ngIf="(schematrons.length ?? 0) == 0" class="array-field__item">
               <span>None</span>
