--- a/angular/projects/admin/src/app/demographics/dashboard-demographics.component.html
+++ b/angular/projects/admin/src/app/demographics/dashboard-demographics.component.html
@@ -5,41 +5,46 @@
   <h4>Current</h4>
   <div class="row mb-5">
     <div class="col-lg-4">
-      <div class="array-field array-field--noclear">
+      <div class="array-field array-field--noclear mb-3">
         <div class="form-field form-field--noclear form-field--nonempty">
-          <label>Settings</label>
           <div class="array-field__item">
-            <span>Version:</span> {{agency?.version?.name|version}}
+            <h5>Version</h5>
+            {{record?.version?.name|version}}
           </div>
           <div class="array-field__item">
-            <span>NEMSIS:</span> {{agency?.version?.nemsisVersion}}
+            <h5>NEMSIS Version</h5>
+            {{record?.version?.nemsisVersion}}
           </div>
           <div class="array-field__item">
-            <span>State Data Set:</span> {{agency?.version?.stateDataSet?.displayVersion}}
+            <h5>State Data Set</h5>
+            {{record?.version?.stateDataSet?.displayVersion}}
           </div>
         </div>
       </div>
+      <button *ngIf="!record?.draftVersion" [disabled]="isCreatingNewVersion" (click)="onNewVersion()" type="button" class="btn btn--primary">New Version</button>
     </div>
   </div>
-  <div *ngIf="agency?.draftVersion">
+  <div *ngIf="record?.draftVersion">
     <h4>Draft</h4>
     <div class="row">
       <div class="col-lg-4">
         <div class="array-field array-field--noclear mb-3">
           <div class="form-field form-field--noclear form-field--nonempty">
-            <label>Settings</label>
             <div class="array-field__item">
-              <span>Version:</span> {{agency?.draftVersion?.name|version}}
+              <h5>Version:</h5>
+              {{record?.draftVersion?.name|version}}
             </div>
             <div class="array-field__item">
-              <span>NEMSIS:</span> {{agency?.draftVersion?.nemsisVersion}}
+              <h5>NEMSIS Version</h5>
+              {{record?.draftVersion?.nemsisVersion}}
             </div>
             <div class="array-field__item">
-              <span>State Data Set:</span> {{agency?.draftVersion?.stateDataSet?.displayVersion}}
+              <h5>State Data Set:</h5>
+              {{record?.draftVersion?.stateDataSet?.displayVersion}}
             </div>
           </div>
         </div>
-        <button type="button" class="btn btn--primary me-3" [routerLink]="['/demographics/versions', agency.draftVersion.id, 'preview']">Preview</button>
+        <button type="button" class="btn btn--primary me-3" [routerLink]="['/demographics/versions', record.draftVersion.id, 'preview']">Preview</button>
         <button type="button" class="btn btn--primary">Validate</button>
       </div>
     </div>
