--- a/angular/projects/admin/src/app/demographics/versions/edit-version-demographics.component.html
+++ b/angular/projects/admin/src/app/demographics/versions/edit-version-demographics.component.html
@@ -7,7 +7,7 @@
       <li class="nav__item"><a tabIndex="0" class="nav__link nav__link--active" routerLink="">Details</a></li>
       <li class="nav__item"><a tabIndex="0" class="nav__link" routerLink="preview">XML</a></li>
     </ul>
-    <shared-form *ngIf="id" type="versions" [id]="id" [disabled]="!isDraft" (load)="onLoad($event)" (update)="onUpdate()">
+    <shared-form *ngIf="id" type="versions" [id]="id" [disabled]="!isDraft" (load)="onLoad($event)" (update)="onUpdate()" (delete)="onDelete()">
       <ng-template let-record="record" let-error="error">
         <div class="mb-3 d-flex align-items-center">
           <shared-text-field id="name" class="flex-grow-1 me-3" label="Name" [source]="record" [error]="error"></shared-text-field>
