--- a/angular/projects/admin/src/app/demographics/dashboard-demographics.component.html
+++ b/angular/projects/admin/src/app/demographics/dashboard-demographics.component.html
@@ -1,5 +1,5 @@
 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2">
-  <h1 class="h2">Dashboard</h1>
+  <h1 class="h2">{{record?.name}} Dashboard</h1>
 </div>
 <form>
   <h4>Current</h4>
