--- a/angular/projects/admin/src/app/demographics/dashboard-demographics.component.html
+++ b/angular/projects/admin/src/app/demographics/dashboard-demographics.component.html
@@ -3,7 +3,7 @@
 </div>
 <form>
   <h4>Current</h4>
-  <div class="row mb-5">
+  <div class="row mb-4">
     <div class="col-lg-4">
       <div class="array-field array-field--noclear mb-3">
         <div class="form-field form-field--noclear form-field--nonempty">
@@ -18,6 +18,18 @@
           <div class="array-field__item">
             <h5>State Data Set</h5>
             {{record?.version?.stateDataSet?.displayVersion}}
+          </div>
+          <div *ngIf="record?.demSchematronIds?.length" class="array-field__item">
+            <h5>DEM Schematrons</h5>
+            <div *ngFor="let schematronId of record.demSchematronIds">
+              {{schematronById(schematronId)?.displayVersion}}
+            </div>
+          </div>
+          <div *ngIf="record?.emsSchematronIds?.length" class="array-field__item">
+            <h5>EMS Schematrons</h5>
+            <div *ngFor="let schematronId of record.emsSchematronIds">
+              {{schematronById(schematronId)?.displayVersion}}
+            </div>
           </div>
         </div>
       </div>
@@ -39,8 +51,20 @@
               {{record?.draftVersion?.nemsisVersion}}
             </div>
             <div class="array-field__item">
-              <h5>State Data Set:</h5>
+              <h5>State Data Set</h5>
               {{record?.draftVersion?.stateDataSet?.displayVersion}}
+            </div>
+            <div *ngIf="record?.draftVersion?.demSchematronIds?.length" class="array-field__item">
+              <h5>DEM Schematrons</h5>
+              <div *ngFor="let schematronId of record.draftVersion.demSchematronIds">
+                {{schematronById(schematronId)?.displayVersion}}
+              </div>
+            </div>
+            <div *ngIf="record?.draftVersion?.emsSchematronIds?.length" class="array-field__item">
+              <h5>EMS Schematrons</h5>
+              <div *ngFor="let schematronId of record.draftVersion.emsSchematronIds">
+                {{schematronById(schematronId)?.displayVersion}}
+              </div>
             </div>
           </div>
         </div>
